src/test/ui/rfc-1937-termination-trait/termination-trait-test-wrong-type.stderr
error[E0277]: `main` has invalid return type `f32`
  --> $DIR/termination-trait-test-wrong-type.rs:6:1
   |
LL |   #[test]
   |   ------- in this procedural macro expansion
LL | / fn can_parse_zero_as_f32() -> Result<f32, ParseFloatError> {
LL | |     "0".parse()
LL | | }
   | |_^ `main` can only return types that implement `Termination`
   |
   = help: the trait `Termination` is not implemented for `f32`
   = note: required for `Result<f32, ParseFloatError>` to implement `Termination`
note: required by a bound in `assert_test_result`
  --> $SRC_DIR/test/src/lib.rs:LL:COL
   |
LL | pub fn assert_test_result<T: Termination>(result: T) -> Result<(), String> {
   |                              ^^^^^^^^^^^ required by this bound in `assert_test_result`
   = note: this error originates in the attribute macro `test` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
